[package]
name = "wolfssl-wolfcrypt"
version = "1.2.0"
edition = "2024"
description = "Rust wrapper for wolfssl C library cryptographic functionality"
license = "GPL-3.0"
repository = "https://github.com/wolfSSL/wolfssl"
documentation = "https://github.com/wolfSSL/wolfssl/tree/master/wrapper/rust"
keywords = ["wolfssl", "fips", "security", "encryption", "cryptography"]
categories = ["cryptography", "security", "api-bindings"]
readme = "README.md"

[features]
std = []
rand_core = ["dep:rand_core"]
aead = ["dep:aead"]
cipher = ["dep:cipher"]
digest = ["dep:digest"]
signature = ["dep:signature"]

[dependencies]
rand_core = { version = "0.10", optional = true, default-features = false }
aead = { version = "0.5", optional = true, default-features = false }
cipher = { version = "0.5", optional = true, default-features = false }
digest = { version = "0.11", optional = true, default-features = false, features = ["block-api"] }
signature = { version = "2.2", optional = true, default-features = false }
zeroize = { version = "1.3", default-features = false, features = ["derive"] }

[dev-dependencies]
aead = { version = "0.5", features = ["alloc", "dev"] }
cipher = "0.5"
digest = { version = "0.11", features = ["dev"] }
signature = "2.2"

[build-dependencies]
bindgen = "0.72.1"
regex = "1.5"

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
